[package]
name = "sse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.1"
tokio-util = { version = "0.7", features = ["io"] }
warp="0.3.3"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
parking_lot = "0.10.0"
futures-util = "0.3.28"
async-stream = "0.3.5"
lazy_static = "1.4.0"
chrono = "0.4.24"
rand = "0.8.5"
nix = "0.26.2"
anyhow = "1.0.71"
sendfd = { version = "0.4.3",  feature = ["tokio"] }
exec = "0.3.1"
mem = "0.5.0"
futures = "0.3.28"
csv = "1.2.2"
